--- a/colorproject.html
+++ b/colorproject.html
@@ -4,6 +4,7 @@
 	<title>Color game</title>
 	<link rel="stylesheet" type="text/css" href="color1.css">
 </head>
+<!-- Color game -->
 <body>
 
 	 <h1>The great 
@@ -26,6 +27,7 @@
 <div class="square"></div>
 <div class="square"></div>
 </div>
+
 
 
 <script type="text/javascript" src="color.js"></script>
